--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,15 @@
   "permissions": ["debugger", "activeTab", "tabs", "downloads"],
   "host_permissions": ["<all_urls>"],
   "action": {
-    "default_popup": "popup.html"
-  },
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "images/icon16.png",
       "48": "images/icon48.png",
       "128": "images/icon128.png"
     }
+  },
+  "background": {
+    "service_worker": "background.js"
   },
   "icons": {
     "16": "images/icon16.png",
